--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -64,7 +64,7 @@ $core-font-size: 16px;
 
 /// Default H1 Font Settings
 h1 {
-  @apply text-d-1 text-grey-900 font-ExtraBold;
+  @apply text-h-1 text-grey-900 font-ExtraBold;
 }
 /// Default H2 Font Settings
 h2 {
